k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: embedded-finance
  labels:
    name: embedded-finance
    app: embedded-finance-api
